--- a/src/Docs/styles/styles.scss
+++ b/src/Docs/styles/styles.scss
@@ -1,19 +1,26 @@
 @charset "utf-8";
 
-@import '~@fortawesome/fontawesome-free/css/all.min.css';
+@forward "github-gist.scss";
 
-// Bulma
-@import "~bulma";
-@import '~bulma-quickview';
-@import "~bulma-calendar";
-@import "~bulma-tooltip";
-@import "~bulma-checkradio";
-@import "~bulma-switch";
-@import "~bulma-popover/css/bulma-popover.css";
-@import "~bulma-pageloader/dist/css/bulma-pageloader.min.css";
-@import "github-gist.scss";
-@import "~@creativebulma/bulma-divider";
-@import "~@creativebulma/bulma-badge";
-@import "~bulma-slider";
-@import "~bulma-timeline";
-@import "~@creativebulma/bulma-tagsinput";
+@forward "bulma";
+@forward "bulma-quickview";
+
+@forward '@fortawesome/fontawesome-free/css/all.css';
+
+// A helper class for the color swatch
+.bd-color-swatch {
+    background-color:var(--background);
+    border-radius:.25em;
+    box-shadow:0 .125em .25em 0 rgba(0,0,0,.1),inset 0 0 0 1px rgba(0,0,0,.1);
+    color:var(--color);
+    display:inline-flex;
+    font-family:var(--bulma-family-code);
+    font-size:.875em;
+    gap:.375em;
+    line-height:1;
+    min-height:1.5rem;
+    min-width:1.5rem;
+    padding:.5rem;
+    vertical-align:top;
+    white-space:nowrap
+}
