--- a/src/Docs/styles/styles.scss
+++ b/src/Docs/styles/styles.scss
@@ -1,19 +1,6 @@
 @charset "utf-8";
 
-@import '~@fortawesome/fontawesome-free/css/all.min.css';
+@forward "github-gist.scss";
 
-// Bulma
-@import "~bulma";
-@import '~bulma-quickview';
-@import "~bulma-calendar";
-@import "~bulma-tooltip";
-@import "~bulma-checkradio";
-@import "~bulma-switch";
-@import "~bulma-popover/css/bulma-popover.css";
-@import "~bulma-pageloader/dist/css/bulma-pageloader.min.css";
-@import "github-gist.scss";
-@import "~@creativebulma/bulma-divider";
-@import "~@creativebulma/bulma-badge";
-@import "~bulma-slider";
-@import "~bulma-timeline";
-@import "~@creativebulma/bulma-tagsinput";
+@forward "bulma";
+@forward "bulma-quickview";
