--- a/src/Docs/styles/styles.scss
+++ b/src/Docs/styles/styles.scss
@@ -9,9 +9,32 @@
     padding: unset;
 }
 
-#shiki-container,pre {
+#shiki-container,
+pre {
     padding: unset;
-	border-radius: var(--bulma-radius-medium);
+    border-radius: var(--bulma-radius-medium);
 }
 
-// @forward "bulma-quickview";
+.app-loader {
+    width: 72px;
+    height: 72px;
+    border: 5px solid #fff;
+    border-bottom-color: #41b3eb;
+    border-radius: 50%;
+    display: inline-block;
+    box-sizing: border-box;
+    animation: rotation 1s linear infinite;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+@keyframes rotation {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
